# term2023

./: .gitignore  slide.md  term.md
accident/: post-process.sql  uploader.py
accidents/: filter.sql  main.py  process.sql  uploader.py
analyze/: analyze.py  classifier_lightgbm.py  classifier_xgboost.py  pre-process.py  tuning_lightgbm.py
compute/: clearance.sql  composition.sql  cross.sql  pipeline.sql  width.sql
crawler/: .gitignore  Cargo.toml  lib.py  main.py  rdcl_clearance.sql  rdcl_composition.sql  rdcl_cross.sql  rdcl_it.sql  rdcl_rad.sql  rdcl_width.sql
crawler/src/: main.rs
population/: uploader.py
