[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
futures = { version = "0.3", default-features = false, features = ["std"] }
geojson = "0.24"
reqwest = "0.11"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
